<resources>
    <string name="app_name">BBeacon</string>

    <string name="tab_1">Alarm</string>
    <string name="tab_2">Weather</string>
    <string name="tab_3">Scanner</string>
    <string name="bundle_fragment">fragment</string>

    <string name="time_to_next_alarm">Time to next alarm: %s</string>
    <string name="next_alarm">Next alarm: %s</string>
    <string name="pressure">%s hPa</string>
    <string name="humidity">%s %%</string>
    <string name="wind_speed">%s m/s</string>
    <string name="pressure_unit">" hPa"</string>
    <string name="humidity_unit">" %"</string>
    <string name="temperature_unit">" \u2103"</string>
    <string name="after_alarm_updated">Alarm updated…</string>
    <string name="select_color">Select color</string>
    <string name="date_format_hhmm">HH:mm</string>
    <string name="to_next_alarm">Time to next alarm: %s</string>
    <string name="last_visible_at"><b>Last visible: </b> 17:32 17/05/17</string>
    <string name="first_disable_alarm">First disable alarm !</string>
    <string name="none">-</string>
    <string name="name_intent_key">name</string>
    <string name="tracked_beacons">Tracked beacons</string>
    <string name="enable_internet_to_refresh_weather">Enable your Internet and refresh to get weather…</string>
    <string name="openweathermap_icon_url">http://openweathermap.org/img/w/%s.png</string>
    <string name="beacon_name">Beacon: Keys</string>
    <string name="no_alarms_available">No alarms available</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="distance"><b>Distance: </b> unknown</string>
    <string name="celsjus">℃</string>
    <string name="no_weather_data">No alarms weather data, first configure or enable scanning your beacons…</string>
    <string name="dash">-</string>
    <string name="new_alarm">New Alarm</string>
    <string name="temperature_key">temperature</string>
    <string name="humidity_key">humidity</string>
    <string name="pressure_key">pressure</string>
    <string name="less">less</string>
    <string name="more">more</string>
    <string name="equal">equal</string>
    <string name="get_notify_conditions_from_user_title">Select notify conditions</string>
    <string name="get_parameter_spinner_title">Select parameter</string>
    <string name="get_condition_spinner_title">Select condition</string>
    <string name="get_value_get_notification">Select value</string>
    <string name="select_value">Select value</string>
    <string name="co_ppm">CO (ppm)</string>
    <string name="no2_ppb">NO<sub>2</sub> (ppb)</string>
    <string name="pm_10_g_m3">Pm<sub>10</sub> (µg/m<sup>3</sup>)</string>
    <string name="pm_25_g_m3">Pm<sub>25</sub> (µg/m<sup>3</sup>)</string>

    <string-array
        name="notify_parameters">
        <item>temperature</item>
        <item>pressure</item>
        <item>humidity</item>
    </string-array>

    <string-array
        name="notify_conditions">
        <item>less</item>
        <item>more</item>
        <item>equal</item>
    </string-array>


</resources>
