<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageTV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/size_12dp"
    android:weightSum="7"
    tools:showIn="@layout/add_new_alarm_fragment">

    <TextView
        android:id="@+id/day1TV"
        style="@style/DayOfWeek"
        android:text="@string/mon"/>

    <TextView
        android:id="@+id/day2TV"
        style="@style/DayOfWeek"
        android:text="@string/tue"/>

    <TextView
        android:id="@+id/day3TV"
        style="@style/DayOfWeek"
        android:text="@string/wed"/>

    <TextView
        android:id="@+id/day4TV"
        style="@style/DayOfWeek"
        android:text="@string/thu"/>

    <TextView
        android:id="@+id/day5TV"
        style="@style/DayOfWeek"
        android:text="@string/fri"/>

    <TextView
        android:id="@+id/day6TV"
        style="@style/DayOfWeek"
        android:text="@string/sat"/>

    <TextView
        android:id="@+id/day7TV"
        style="@style/DayOfWeek"
        android:text="@string/sun"/>

</LinearLayout>